--- a/reSOUND/Views/Base.lproj/Main.storyboard
+++ b/reSOUND/Views/Base.lproj/Main.storyboard
@@ -110,9 +110,19 @@
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tnO-4x-Rt1">
                                                                     <rect key="frame" x="39" y="11" width="88" height="87.5"/>
+                                                                    <subviews>
+                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mCc-p3-F4J">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="88" height="87.5"/>
+                                                                            <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                        </imageView>
+                                                                    </subviews>
                                                                     <color key="backgroundColor" red="1" green="0.5409764051" blue="0.84731429820000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <constraints>
+                                                                        <constraint firstItem="mCc-p3-F4J" firstAttribute="top" secondItem="tnO-4x-Rt1" secondAttribute="top" id="8QT-wU-QG7"/>
+                                                                        <constraint firstAttribute="trailing" secondItem="mCc-p3-F4J" secondAttribute="trailing" id="JFP-gp-WnM"/>
+                                                                        <constraint firstItem="mCc-p3-F4J" firstAttribute="leading" secondItem="tnO-4x-Rt1" secondAttribute="leading" id="sOI-88-4GS"/>
                                                                         <constraint firstAttribute="width" secondItem="tnO-4x-Rt1" secondAttribute="height" multiplier="1:1" id="wJn-UG-Nyc"/>
+                                                                        <constraint firstAttribute="bottom" secondItem="mCc-p3-F4J" secondAttribute="bottom" id="yNm-pR-aDK"/>
                                                                     </constraints>
                                                                 </view>
                                                             </subviews>
@@ -173,6 +183,7 @@
                                             <outlet property="nameLabel" destination="9Ej-dT-gZs" id="guG-2Y-ISR"/>
                                             <outlet property="placeHolderView" destination="tnO-4x-Rt1" id="EZ7-SN-aba"/>
                                             <outlet property="provinceLabel" destination="f0z-w8-94k" id="eeg-eW-erl"/>
+                                            <outlet property="usersImageView" destination="mCc-p3-F4J" id="7Qp-VR-7fc"/>
                                             <segue destination="jJ0-IW-2xk" kind="show" identifier="detailSegue" id="YqP-dD-A2j"/>
                                         </connections>
                                     </collectionViewCell>
@@ -295,7 +306,19 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="trf-yh-gz0">
                                 <rect key="frame" x="87" y="104" width="200" height="206"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AVH-rR-sUV">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="206"/>
+                                        <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="AVH-rR-sUV" firstAttribute="top" secondItem="trf-yh-gz0" secondAttribute="top" id="CiP-Kc-GMe"/>
+                                    <constraint firstAttribute="trailing" secondItem="AVH-rR-sUV" secondAttribute="trailing" id="eY4-bz-fUz"/>
+                                    <constraint firstItem="AVH-rR-sUV" firstAttribute="leading" secondItem="trf-yh-gz0" secondAttribute="leading" id="fIt-Bt-BDm"/>
+                                    <constraint firstAttribute="bottom" secondItem="AVH-rR-sUV" secondAttribute="bottom" id="g9f-Yd-5Ja"/>
+                                </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Lt3-sI-kCL">
                                 <rect key="frame" x="10" y="318" width="355" height="246"/>
@@ -389,6 +412,7 @@
                         <outlet property="connectButton" destination="vSg-60-wlP" id="yRo-mB-g3r"/>
                         <outlet property="detailCityLabel" destination="cR7-Cv-ZKl" id="Xcr-uK-Cc7"/>
                         <outlet property="detailDescriptionLabel" destination="vuw-9Q-d3Y" id="AAn-xn-kdl"/>
+                        <outlet property="detailImageView" destination="AVH-rR-sUV" id="ug5-nG-YiX"/>
                         <outlet property="detailLinkLabel" destination="iA0-mc-akn" id="mnp-y2-AWy"/>
                         <outlet property="detailNameLabel" destination="QRs-3N-JNH" id="wiQ-rU-wS6"/>
                         <outlet property="detailProvinceLabel" destination="Aq2-Lg-jdM" id="RZN-2O-21N"/>
@@ -672,7 +696,7 @@
                                 <rect key="frame" x="111" y="508" width="180" height="95"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
