--- a/reSOUND/Views/Base.lproj/Main.storyboard
+++ b/reSOUND/Views/Base.lproj/Main.storyboard
@@ -623,33 +623,42 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lSq-wT-4nZ">
-                                                    <rect key="frame" x="15" y="51" width="325" height="83"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" red="0.65278508400454971" green="0.86377811104059476" blue="1" alpha="0.41366117294520549" colorSpace="custom" customColorSpace="displayP3"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                                    <color key="textColor" red="0.0082919335973802924" green="0.010844795654669179" blue="0.012848984771573591" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9rJ-H6-6AU">
+                                                    <rect key="frame" x="308" y="11" width="42" height="26.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                            <integer key="value" value="10"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qNx-Nq-FRW">
-                                                    <rect key="frame" x="15" y="11" width="126" height="43"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3yd-KQ-tgn">
+                                                    <rect key="frame" x="0.0" y="37.5" width="375" height="112.5"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qNx-Nq-FRW">
+                                                    <rect key="frame" x="10" y="0.0" width="54" height="37.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="9rJ-H6-6AU" firstAttribute="top" secondItem="aMe-NK-J7y" secondAttribute="topMargin" id="1bU-Hp-Huq"/>
+                                                <constraint firstItem="3yd-KQ-tgn" firstAttribute="height" secondItem="aMe-NK-J7y" secondAttribute="height" multiplier="0.75" id="4lA-az-QK3"/>
+                                                <constraint firstAttribute="trailing" secondItem="3yd-KQ-tgn" secondAttribute="trailing" id="DBD-O8-Odd"/>
+                                                <constraint firstItem="qNx-Nq-FRW" firstAttribute="leading" secondItem="aMe-NK-J7y" secondAttribute="leading" constant="10" id="GwW-NA-emR"/>
+                                                <constraint firstItem="qNx-Nq-FRW" firstAttribute="top" secondItem="aMe-NK-J7y" secondAttribute="top" id="P0d-7M-wTJ"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="9rJ-H6-6AU" secondAttribute="trailing" constant="10" id="VnK-cA-6gl"/>
+                                                <constraint firstItem="3yd-KQ-tgn" firstAttribute="top" secondItem="qNx-Nq-FRW" secondAttribute="bottom" id="ZBM-0O-zaB"/>
+                                                <constraint firstItem="3yd-KQ-tgn" firstAttribute="top" secondItem="9rJ-H6-6AU" secondAttribute="bottom" id="Zri-hD-Hw8"/>
+                                                <constraint firstItem="3yd-KQ-tgn" firstAttribute="leading" secondItem="aMe-NK-J7y" secondAttribute="leading" id="gFE-pL-pK8"/>
+                                                <constraint firstAttribute="bottom" secondItem="3yd-KQ-tgn" secondAttribute="bottom" id="qZ3-oT-4NJ"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
-                                            <outlet property="messageLabel" destination="lSq-wT-4nZ" id="I10-PY-wyJ"/>
+                                            <outlet property="messageContainer" destination="3yd-KQ-tgn" id="oxv-aa-2TQ"/>
                                             <outlet property="senderLabel" destination="qNx-Nq-FRW" id="8Db-4a-iKx"/>
+                                            <outlet property="timestampLabel" destination="9rJ-H6-6AU" id="hcl-OZ-VSg"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -661,12 +670,10 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="AlS-cu-z7D">
                                 <rect key="frame" x="10" y="548" width="288" height="60"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="JhR-62-ZDf"/>
                                 </constraints>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
-
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
